

bin_PROGRAMS = spectrum3d

#spectrum3d_CFLAGS = $(GSTREAMER_CFLAGS) $(GTK_CFLAGS) $(BAMF_CFLAGS)
#spectrum3d_LDADD = $(GSTREAMER_LIBS) $(GTK_LIBS) $(BAMF_LIBS)

spectrum3d_SOURCES = display.c events.c equalizer.c geis.c main.c mainwindow.c menu.c onclick.c preferences.c scale.c testrtpool.c display.h equalizer.h events.h geis.h main.h mainwindow.h menu.h onclick.h preferences.h scale.h testrtpool.h



