

bin_PROGRAMS = spectrum3d

#spectrum3d_CFLAGS = $(GSTREAMER_CFLAGS) $(GTK_CFLAGS) $(BAMF_CFLAGS)
#spectrum3d_LDADD = $(GSTREAMER_LIBS) $(GTK_LIBS) $(BAMF_LIBS)

spectrum3d_SOURCES = display.c events.c equalizer.c geis.c gstreamer.c main.c menu.c onclick.c preferences.c record.c scale.c testrtpool.c typesource.c display.h equalizer.h events.h geis.h gstreamer.h main.h menu.h onclick.h preferences.h record.h scale.h spectrum3d.h testrtpool.h typesource.h

AM_CPPFLAGS = -DDATADIR='"$(datadir)"'



