

bin_PROGRAMS = spectrum3d

#AM_CFLAGS=-Wall -Wextra -O2 -g -DGST_DISABLE_DEPRECATED

spectrum3d_SOURCES = display.c events.c equalizer.c geis.c gstreamer.c main.c menu.c onclick.c preferences.c record.c scale.c typesource.c display.h equalizer.h events.h geis.h gstreamer.h main.h menu.h onclick.h preferences.h record.h scale.h spectrum3d.h typesource.h

AM_CPPFLAGS = -DDATADIR='"$(datadir)"'



